welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: not found: value compteur
			compteur = compteur + 1;
                        ^Poucet:9: error: not found: value compteur
	if (compteur <= 2) {
            ^